<resources>
    <string name="tvTituloREC">GREENLAND</string>
    <string name="tvContenidouno">Datos Emprendedor</string>
    <string name="tvContenidodos">Lorem Ipsum es</string>
    <string name="tvcontenidotres">simplemente el texto </string>
    <string name="tvcontenidocuatro">imprentas y archivos </string>
    <string name="tvcontenidocinco">Ipsum ha sido el texto</string>
    <string name="tvcontenidoseis">de relleno estándar </string>
    <string name="tvcontenidosiete">desde el año 1500, </string>
    <string name="tvcontenidoocho">cuando un impresor </string>
    <string name="tvTituloRECO">RECOLECTOR</string>
    <string name="tvPuntoCanj">PUNTO CANJEADOS 3462</string>
    <string name="tvTituloREC2">GREENLAND</string>
    <string name="tvContenidodos2">DESCRIPCION</string>
    <string name="tvcontenidotres3">simplemente el texto </string>
    <string name="tvcontenidocuatro4">imprentas y archivos </string>
    <string name="tvcontenidocinco5">Ipsum ha sido el texto</string>
    <string name="tvcontenidoseis6">de relleno estándar </string>
    <string name="tvcontenidosiete7">desde el año 1500, </string>
    <string name="tvcontenidoocho8">cuando un impresor </string>
    <string name="tvTituloREC3">GREENLAND</string>
    <string name="tvruta1">RUTA ESTABLECIDA</string>
    <string name="tvruta2">imprentas y archivos </string>
    <string name="tvruta3">Ipsum ha sido el texto</string>
    <string name="tvruta4">de relleno estándar </string>
    <string name="tvruta5">desde el año 1500, </string>
    <string name="tvruta6">cuando un impresor </string>
    <string name="desc_horizontal_scroll_view">desc_horizontal_scroll_view</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Plataforma</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="tvTitulo">GREENLAND</string>
    <string name="tvSubtitulo">Centros de Acopio</string>
    <string name="btnNext">Siguiente</string>
    <string name="btnBack">Volver</string>
    <string name="app_name">Feria</string>
    <string name="TituloLogoApp">GREENLAND</string>
    <string name="tvTituloAM.">GREENLAND</string>
    <string name="tvNova.">Desarrollado por Nova, 2024</string>
    <string name="tvGreenLand">GREENLAND</string>
    <string name="tvNoReciclar">No Reciclables</string>
    <string name="tvBolsasPlasticas">Bolsas Plasticas</string>
    <string name="tvEnvaseDeComida">Envase de Comida</string>
    <string name="tvInfeccioso">Envases Infecciosos</string>
    <string name="tvPorcelana">Productos de Porcelana</string>
    <string name="desBolsaPlastica">Bolsas usadas</string>
    <string name="desBolsaPapel">Envoltorios de comida rapida</string>
    <string name="desInfeccion">Articulos medicos usados</string>
    <string name="desPorcelana">Articulos de porcelana rotos dañados</string>
    <string name="tvTituloBolsa">BOLSA PLASTICA</string>
    <string name="tvParrafoArticuloBolsaP1">Las bolsas de plástico a menudo están contaminadas con residuos de alimentos, tierra y otros materiales. Limpiar estas bolsas para que sean reciclables es un proceso costoso y complicado.</string>
    <string name="tvTituloArticuloBolsaP2">Alternativa mas viable</string>
    <string name="tvParrafoArticuloBolsaP2">En muchos lugares, se prefieren alternativas como el uso de bolsas reutilizables o la prohibición de bolsas de plástico de un solo uso para reducir el problema de raíz. Esto resulta más efectivo desde el punto de vista ambiental y económico.</string>
    <string name="tvTituloEnvoltorio1">Contaminacion</string>
    <string name="tvParrafoEnvoltorio1">Los envoltorios de comida suelen estar contaminados con restos de alimentos, grasas y aceites. Limpiar estos residuos de manera efectiva para que los envoltorios sean reciclables es un proceso complejo y costoso.</string>
    <string name="tvTituloEnvoltorio2">Materiales Compuestos</string>
    <string name="tvParrafoEnvoltorio2">Muchos envoltorios están hechos de materiales compuestos, combinaciones de diferentes tipos de plásticos, aluminio y papel.</string>
    <string name="tvTituloEnvoltorio3">Bajo valor del material reciclado</string>
    <string name="tvParrafoEnvoltorio3">El material obtenido del reciclaje de envoltorios de comida suele tener un valor económico bajo. Esto hace que el proceso no sea rentable en comparación con otros materiales reciclables como botellas de PET o latas de aluminio.</string>
    <string name="tvTituloInfeccioso">ARTICULOS INFECCIOSOS</string>
    <string name="tvTituloParrafoInfeccion1">Contaminacion</string>
    <string name="tvParrafoInfeccion1">Los artículos médicos, especialmente aquellos utilizados en procedimientos quirúrgicos o tratamientos de pacientes, pueden estar contaminados con sangre, fluidos corporales y otros materiales infecciosos.</string>
    <string name="tvTituloParrafoInfeccion2">Materiales diversos</string>
    <string name="tvParrafoInfeeccion2">Los artículos médicos están hechos de una variedad de materiales, incluyendo plásticos, metales, vidrio y compuestos especiales.</string>
    <string name="tvTituloParrafoInfeccion3">Problemas de calidad y seguridad</string>
    <string name="tvParrafoInfeccion3">El uso de materiales reciclados en nuevos artículos médicos puede plantear preocupaciones sobre la calidad y la seguridad del producto final.</string>
    <string name="tvTituloPorcelana">PRODUCTOS DE PORCELANA</string>
    <string name="tvTituloParrafoPorce1">Composición del material</string>
    <string name="tvParrafoPorce1">La porcelana y la cerámica están hechas de una mezcla de minerales, incluyendo arcilla, feldespato y cuarzo, que se vitrifican a altas temperaturas.</string>
    <string name="tvTituloParrafoPorce2">Proceso complicado</string>
    <string name="tvParrafoPorce2">Para reciclar cerámica y porcelana, sería necesario triturar los materiales en partículas muy finas, lo que requiere equipos especiales.</string>
    <string name="tvTituloParrafoPorce3">Contaminación y separación</string>
    <string name="tvParrafoPorce3">La porcelana y la cerámica a menudo están contaminadas con esmaltes, pinturas y otros aditivos que pueden dificultar aún más el proceso de reciclaje. Separar estos contaminantes de manera efectiva es complicado y costoso.</string>
    <string name="tvTituloTiendaEmprende">Productos Ecoamigables</string>
    <string name="tvNombreProductoTienda">Nombre del producto</string>
    <string name="tvDescripcionProductoTienda">Descripcion de los productos como color, materiales,etc</string>
    <string name="btnComprar">Comprar</string>
    <string name="tvCompraProducto">COMPRA</string>
    <string name="alDireccionVendedor">Direccion:</string>
    <string name="alTelefonoVendedor">Telefono:</string>
    <string name="alNombreProveedor">Nombre del proveedor</string>
    <string name="alVentasProveedor">Cantidad de articulos vendidos</string>
    <string name="tvTituloAM">GREENLAND</string>
    <string name="tvNova">Desarrollado por Nova, 2024</string>
    <string name="tvPorque">PORQUE?</string>
    <string name="tvRecicla">Porque protege nuestro planeta, conserva recursos preciosos y reduce la contaminación. Cada acción cuenta para un futuro más limpio y sostenible para todos.</string>
    <string name="btnSiguiente">SIGUIENTE</string>
    <string name="tvRecicla1">¡RECICLA!</string>
    <string name="tvCadaBotella">Cada botella cuenta.</string>
    <string name="tvCadaAccion">Cada accion suma.</string>
    <string name="tvCadaPequeño">Cada pequeño gesto cuenta en la protección de nuestro planeta.</string>
    <string name="btnSiguiente1">SIGUIENTE</string>
    <string name="tvMision">MISION</string>
    <string name="tvmision1">Transformar nuestra forma de consumir y desechar, promoviendo la reutilización de
        materiales para conservar recursos naturales, reducir la contaminación y crear un entorno más saludable y sostenible
        para las generaciones futuras.</string>
    <string name="tvVision">VISION</string>
    <string name="tvvision1">Alcanzar un mundo donde el ciclo de vida de los materiales sea circular y sostenible.
        Esto implica que todos los productos sean diseñados
        para ser reciclados fácilmente, que se minimice la generación de residuos y que se maximice la recuperación de recursos.</string>
    <string name="btnSiguiente2">SIGUIENTE</string>
    <string name="tvBienvenido">Bienvenido</string>
    <string name="tvEmprendedor">Emprendor</string>
    <string name="tvNombre">Nombre:</string>
    <string name="edtNombre"></string>
    <string name="tvDireccion">Direccion:</string>
    <string name="edtDireccion"></string>
    <string name="tvCI">CI/Nit:</string>
    <string name="edtCI"></string>
    <string name="tvTelefono1">Telefono 1:</string>
    <string name="edtTelefono1"></string>
    <string name="tvTelefono2">Telefono 2:</string>
    <string name="edtTelefono2"></string>
    <string name="tvDirecodecrip">Descripcion del producto:</string>
    <string name="edtDireco"></string>
    <string name="tvSubirFoto">Subir Foto:</string>
    <string name="btnBuscarImagen">Buscar imagen</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="btnVolver">Volver</string>
    <string name="tvNombreReci">Nombre:</string>
    <string name="edtNombreReci"></string>
    <string name="tvDireccionReci">Direccion:</string>
    <string name="edtDireccionReci"></string>
    <string name="tvCIREci">CI/Nit:</string>
    <string name="edtCIReci"></string>
    <string name="tvTelefono1Reci">Telefono 1:</string>
    <string name="edtTelefono1Reci"></string>
    <string name="tvTelefono2Reci">Telefono 2:</string>
    <string name="edtTelefono2Reci"></string>
    <string name="tvSubirFotoReci">Subir Foto:</string>
    <string name="btnBuscarImagenReci">Buscar imagen</string>
    <string name="btnRegistrarReci">Registrar</string>
    <string name="btnVolverReci">Volver</string>
    <string name="tvNombreR">Nombre:</string>
    <string name="edtNombreR"></string>
    <string name="tvDireccionR">Direccion:</string>
    <string name="edtDireccionR"></string>
    <string name="tvCIR">CI/Nit:</string>
    <string name="edtCIR"></string>
    <string name="tvTelefono1R">Telefono 1:</string>
    <string name="edtTelefono1R"></string>
    <string name="tvTelefono2R">Telefono 2:</string>
    <string name="edtTelefono2R"></string>
    <string name="tvAcopiosR">Acopios relacionados:</string>
    <string name="edtDirecoR"></string>
    <string name="edtDireco1R"></string>
    <string name="edtDireco2R"></string>
    <string name="tvSubirFotoR">Subir Foto:</string>
    <string name="btnBuscarImagenR">Buscar imagen</string>
    <string name="btnRegistrarR">Registrar</string>
    <string name="btnVolverR">Volver</string>
    <string name="btnPapel">Papel</string>
    <string name="btnAceiteCocina">AceiteCocina</string>
    <string name="btnVidrio">Vidrio</string>
    <string name="btnPlasticos">Plasticos</string>
    <string name="btnOrganicos">Organicos</string>
    <string name="btnElectronicos">Electronicos</string>
    <string name="btnMetales">Metales</string>
    <string name="btnNeumaticos">Neumaticos</string>
    <string name="btnGaleria">Galeria</string>
    <string name="btnArticulos">Articulos</string>
    <string name="btnActividades">Actividades</string>
    <string name="btnManualidades">Manualidades</string>
    <string name="tvreciclables">Reciclables</string>
    <string name="TituloPapel">Papel y Carton
        </string>
    <string name="VentajasPapel">VENTAJAS
        </string>
    <string name="VentajasPapelDescripcion">Se disminuye el consumo madera agua y energia Disminuye la tala de arboles Se reduce reciduos que alarga la vida de vertederos
        </string>
    <string name="CuriosidadTituloPapel">Curiosidad del Papel</string>
</resources>