<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".CompraActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/verdeFuerte"
            android:textColor="@color/blanco"
            android:textSize="18sp"
            android:text="@string/tvGreenLand" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/verdeFuerte"
            android:textStyle="bold"
            android:textColor="@color/blanco"
            android:textSize="25sp"
            android:text="@string/tvCompraProducto" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/img_compra_reciclado" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/degradado_fuerte"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/tvNombreProductoTienda"
                android:textColor="@color/blanco"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/tvDescripcionProductoTienda"
                android:textColor="@color/blanco"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/alDireccionVendedor"
                android:textColor="@color/blanco"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/alTelefonoVendedor"
                android:textColor="@color/blanco" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/degradado_fuerte"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView36"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blanco"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/alNombreProveedor" />

            <TextView
                android:id="@+id/textView37"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blanco"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/alVentasProveedor" />
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>