<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecolectorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvUno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvTituloREC"
            android:textAlignment="center"
            android:textSize="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/text_background2"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="250dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="100dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:src="@drawable/usuario" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/tvDos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tvContenidouno"
                        android:textColor="@color/blanco" />

                    <TextView
                        android:id="@+id/tvTres"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tvContenidodos"
                        android:textColor="@color/blanco" />

                    <TextView
                        android:id="@+id/tvCuatro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tvcontenidotres"
                        android:textColor="@color/blanco" />

                    <TextView
                        android:id="@+id/tvCinco"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tvcontenidocuatro"
                        android:textColor="@color/blanco" />

                    <TextView
                        android:id="@+id/tvSeis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tvcontenidocinco"
                        android:textColor="@color/blanco" />

                    <TextView
                        android:id="@+id/tvSiete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tvcontenidoseis"
                        android:textColor="@color/blanco" />

                    <TextView
                        android:id="@+id/tvOcho"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tvcontenidosiete"
                        android:textColor="@color/blanco" />

                    <TextView
                        android:id="@+id/tvNueve"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tvcontenidoocho"
                        android:textColor="@color/blanco" />
                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvRecoletor2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tvTituloRECO"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="240dp"
            android:layout_gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="400dp"
                android:layout_height="250dp"
                android:layout_weight="1"
                android:src="@drawable/recolector" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="290dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/text_background2"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btncargar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/verdeFuerte"
                android:text="cargar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:src="@drawable/img_1" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>