<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".MiViActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="match_parent"
            android:layout_height="303dp"
            android:src="@drawable/mundo" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/verdeSuave"
            android:textAlignment="center"
            android:textSize="40sp"
            android:text="@string/tvMision" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="15sp"
            android:textColor="@color/verdeFuerte"
            android:textStyle="bold"
            android:justificationMode="inter_word"
            android:layout_marginEnd="15sp"
            android:textSize="16sp"
            android:text="@string/tvmision1" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"

            android:textColor="@color/verdeSuave"
            android:textAlignment="center"
            android:textSize="40sp"
            android:text="@string/tvVision" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="15sp"
            android:textColor="@color/verdeFuerte"
            android:textStyle="bold"
            android:justificationMode="inter_word"
            android:layout_marginEnd="15sp"
            android:textSize="16sp"
            android:text="@string/tvvision1" />

        <Button
            android:id="@+id/btnSiguiente1"
            android:layout_width="250dp"
            android:layout_marginTop="25sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:textStyle="bold"
            android:textSize="25sp"
            android:backgroundTint="@color/verdeFuerte"
            android:textColor="@color/verdeSuave"
            android:text="@string/btnSiguiente2" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>