<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ruta_establecidaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/tvGREENUno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvTituloREC3"
            android:textAlignment="center"
            android:textSize="30dp" />

        <LinearLayout
            android:layout_width="410dp"
            android:layout_height="300dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="410dp"
                android:layout_height="300dp"
                android:layout_weight="1"
                android:src="@drawable/img_3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="280dp"
            android:layout_gravity="center"
            android:background="@drawable/text_background2"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="250dp"
                android:layout_margin="15dp"
                android:orientation="vertical"

                >

                <TextView
                    android:id="@+id/tvRutaN1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/tvruta1"
                    android:textAlignment="center"
                    android:textColor="@color/blanco"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/tvRutaN2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvruta2"
                    android:textAlignment="center"
                    android:textColor="@color/blanco"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/tvRutaN3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvruta3"
                    android:textAlignment="center"
                    android:textColor="@color/blanco"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/tvRutaN4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvruta4"
                    android:textAlignment="center"
                    android:textColor="@color/blanco"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/tvRutaN5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvruta5"
                    android:textAlignment="center"
                    android:textColor="@color/blanco"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/tvRutaN6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvruta6"
                    android:textAlignment="center"
                    android:textColor="@color/blanco"
                    android:textSize="20dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:src="@drawable/img_1" />
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>