<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".ReciclaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:src="@drawable/arbolito1" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvRecicla1"

            android:textAlignment="center"
            android:textColor="@color/verdeSuave"
            android:textSize="45sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15sp"
            android:justificationMode="inter_word"
            android:text="@string/tvCadaBotella"
            android:textAlignment="center"
            android:textColor="@color/verdeFuerte"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15sp"
            android:justificationMode="inter_word"
            android:text="@string/tvCadaAccion"
            android:textAlignment="center"
            android:textColor="@color/verdeFuerte"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15sp"
            android:justificationMode="inter_word"
            android:text="@string/tvCadaPequeño"
            android:textAlignment="center"
            android:textColor="@color/verdeFuerte"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSiguiente3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginTop="40sp"
            android:backgroundTint="@color/verdeFuerte"
            android:text="@string/btnSiguiente1"
            android:textColor="@color/verdeSuave"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>